changed name of option for coloring diagonals by 'diagonals' to 'syntenic block'

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -705,7 +705,7 @@ function post_to_grimm(seq1, seq2)
    <select name=color_type id=color_type>
      <option value = 0 <TMPL_VAR NAME=COLOR_TYPE_NONE> > Single color </option>
      <option value = inv <TMPL_VAR NAME=COLOR_TYPE_INV> > Inversions </option>
-     <option value = diag <TMPL_VAR NAME=COLOR_TYPE_DIAG> > Diagonals </option>
+     <option value = diag <TMPL_VAR NAME=COLOR_TYPE_DIAG> > Syntenic Block </option>
    </select>
    <br>
    <span class=small style="color:red">&nbsp;&nbsp;&nbsp;&nbsp;Synonymous rates will supercede this option.</span> 
