--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -1,11 +1,3 @@
-<HTML>
-<HEAD>
- <TITLE><TMPL_VAR NAME=TITLE></TITLE>
- <link rel="stylesheet" type="text/css" href="/CoGe/css/styled.css" />
-
-
- <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-</HEAD>
 <SCRIPT language="JavaScript">
 
 $(document).ready(function(){
@@ -267,8 +259,9 @@ function search_bar(div_id){
   if($('#'+div_id).val() == "Search") $('#'+div_id).val("").css({fontStyle: "normal"});
 }
 
-
 </SCRIPT>
+
+
 <TABLE class="ui-widget-content ui-corner-all">
        <TR>
          <TD nowrap>
@@ -352,6 +345,6 @@ function search_bar(div_id){
     <div id=add_all_search></div>
 </div>
 
-<div class="dialog" id="codon_table" title="Codon Usage Table"</div>
-<div class="dialog" id="aa_table" title="Amino Acid Usage Table"</div>
-<div class="dialog" id="codon_aa_alignment" title="Amino Acid Usage Table"</div>
+<div class="dialog" id="codon_table" title="Codon Usage Table"></div>
+<div class="dialog" id="aa_table" title="Amino Acid Usage Table"></div>
+<div class="dialog" id="codon_aa_alignment" title="Amino Acid Usage Table"></div>
