added a Run button to below the options tabs

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -1280,6 +1280,9 @@ function rand ()
 </table>
 </div> <!--end div for tabs-3 div -->
 </div> <!--end div for tabs-->
+
+<span id=go style="font-size: 1em" class='ui-button ui-button-go ui-corner-all' onClick="populate_page_obj(); set_display_order(); loading([],['results']); go_run();">Run GEvo Analysis!</span>
+
 </form>
 </TMPL_IF>
 
