--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -212,7 +212,7 @@ function open_all_sequence_option_menus(open) {
 $(document).ready(function(){
 
      // close the dialog box when the run a new analysis.
-     jQuery('#go').click(function(){
+     jQuery('.go_run').click(function(){
          $('#results_info').dialog('close');
          jQuery('html, body').animate({scrollTop: 0}, 2000);
      });
@@ -762,7 +762,7 @@ function rand ()
 </tr>
 </table>
 </div>
-<span id=go style="font-size: 1em" class='ui-button ui-button-go ui-corner-all' onClick="populate_page_obj(); set_display_order(); loading([],['results']); go_run();">Run GEvo Analysis!</span>
+<span id=go style="font-size: 1em" class='ui-button ui-button-go ui-corner-all go_run' onClick="populate_page_obj(); set_display_order(); loading([],['results']); go_run();">Run GEvo Analysis!</span>
 <table>
 
 <tr align left>
@@ -1281,7 +1281,7 @@ function rand ()
 </div> <!--end div for tabs-3 div -->
 </div> <!--end div for tabs-->
 
-<span id=go style="font-size: 1em" class='ui-button ui-button-go ui-corner-all' onClick="populate_page_obj(); set_display_order(); loading([],['results']); go_run();">Run GEvo Analysis!</span>
+<span id=go style="font-size: 1em" class='ui-button ui-button-go ui-corner-all go_run' onClick="populate_page_obj(); set_display_order(); loading([],['results']); go_run();">Run GEvo Analysis!</span>
 
 </form>
 </TMPL_IF>
