updated text when analysis is running

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -408,7 +408,7 @@ function reset_basename(){
   	pageObj.finished = 1;
   }
   if(log.match(/Generating ks data/i)) {
-  	ks = "Calculating synonymous changes (may take a while) . . . ";
+  	ks = "Calculating synonymous changes (slow) . . . ";
         results = 0;
   	pageObj.finished = 0;
   }
