changed header alert sign for messages

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -186,7 +186,7 @@ $(document).ready( function() {
 });
 
 </SCRIPT>
-<div id=main_alert style="color: red; font-size: 2em;"></div>
+<div id=main_alert style="color: red; font-size: 1em; text-align: center"></div>
 <div id=signin_popup class="image_window" style="display:none"></div>
 <TMPL_UNLESS NAME=MENU>
   <div style="float:right"><!-- open A -->
