updated placement of GenomeViewer and Sequence Retrieval boxes

--- a/web/tmpl/OrganismView.tmpl
+++ b/web/tmpl/OrganismView.tmpl
@@ -293,11 +293,9 @@ $(function() {
     <DIV id="recent_orgs"><a href="#" onclick="get_recent_orgs([],['recent_orgs']);">Show</a></DIV>-->
 
 <TR nowrap>
-  <TD align=left valign=top nowrap>
-   <DIV style="vertical-align: top;" id="viewer"></DIV>
-   <DIV style="vertical-align: top;" id="get_seq"></DIV>
-  <td>
-   <div id="feature_count_data"></div>
+  <TD colspan=2 align=left valign=top nowrap>
+   <DIV style="vertical-align: top; float: left;" id="viewer"></DIV>
+   <DIV style="vertical-align: top; float: left;" id="get_seq"></DIV>
 </Table>
 
 <div class="dialog_box" id="gc_histogram" title="Histogram of GC Content"><input type=hidden id=feat_gc_min></div>
