added link for GenomeList

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -1972,6 +1972,7 @@ $(function() {
      <TD align=left  valign="top" >
      <div id=left_column>
      <span>Genomic HSP Visualization:</span>
+     <DIV class=small><span class=link onclick="window.open('<TMPL_VAR NAME=GENOMELIST_LINK>')">Generate List of Matching Genomes</DIV>
      <DIV id=chromosomes class="ui-widget-content ui-corner-all" style="width: 405px;overflow: auto;max-height: 700px;">
 
      <TMPL_VAR NAME=CHROMOSOMES>
