changed hard link to relative link for ajaxSetup

--- a/web/tmpl/GenomeList.tmpl
+++ b/web/tmpl/GenomeList.tmpl
@@ -21,8 +21,8 @@
 
 	$.ajaxSetup({
 	               type: "GET",
-	               url: "/CoGe/GenomeList.pl",
-	               //dataType: "html",
+	               url: "GenomeList.pl",
+	               dataType: "html",
 	               cache: false,
 	       });
 
