--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -405,7 +405,8 @@ function check_alignment_program (){
   if ((alignment == "blastn")||(alignment == "tblastx")){
     var help_path = "\"http://www.ncbi.nlm.nih.gov/BLAST/Blast.cgi?CMD=Web&PAGE_TYPE=BlastDocs\"";}
   else{
-    var help_path = "\"/CoGe/docs/alignment_help_files/README."+alignment+"\"";}
+    var help_path = "\"/CoGe/docs/alignment_help_files/README."+alignment+"\"";
+}
   var help = '<a href='+help_path+' target="_new">Help File for '+alignment+'</a>';
   $('.help').html(help);
   var spike = $("#spike").val();
@@ -447,10 +448,10 @@ else if (alignment == "tblastx")
  }	
 else if (alignment == 'blastn')
  {
-  $("#blast_wordsize").val(7);
-  $("#blast_gapopen").val(5);
-  $("#blast_gapextend").val(2);
-  $("#blast_eval").val(30);
+//  $("#blast_wordsize").val(7);
+//  $("#blast_gapopen").val(5);
+//  $("#blast_gapextend").val(2);
+//  $("#blast_eval").val(30);
   if (spike == "undefined" || spike == 0) {spike = 15;} 	
   $("#spike").val(spike);
   check_spike();		
@@ -847,23 +848,23 @@ function rand ()
 
  <TR class="blastn_options">
   <TD>Match Score (-r): </TD>
-  <TD><input type="text" name="blast_match" id="blast_match" tabindex="1" size="3" value="1" /></TD>
+  <TD><input type="text" name="blast_match" id="blast_match" tabindex="1" size="3" value="<TMPL_VAR NAME="BLAST_MATCH">" /></TD>
  </TR>    
  <TR class="blastn_options">
   <TD>Mismatch Penalty (-q): </TD>
-  <TD><input  type="text" name="blast_mismatch" id="blast_mismatch" tabindex="1" size="3" value="-2" /></TD>
+  <TD><input  type="text" name="blast_mismatch" id="blast_mismatch" tabindex="1" size="3" value="<TMPL_VAR NAME="BLAST_MISMATCH">" /></TD>
  </TR> 
  <TR>
   <TD>Gap Open Penalty (-G): </TD>
-  <TD><input  type="text" name="blast_gapopen" id="blast_gapopen" tabindex="1" size="3" value="5" /></TD>
+  <TD><input  type="text" name="blast_gapopen" id="blast_gapopen" tabindex="1" size="3" value="<TMPL_VAR NAME="BLAST_GAPOPEN">" /></TD>
  </TR>    
  <TR>
   <TD>Gap Extension Penalty (-E): </TD>
-  <TD><input  type="text" name="blast_gapextend" id="blast_gapextend" tabindex="1" size="3" value="2" /></TD>
+  <TD><input  type="text" name="blast_gapextend" id="blast_gapextend" tabindex="1" size="3" value="<TMPL_VAR NAME="BLAST_GAPEXT">" /></TD>
  </TR>    
   <TR>
   <TD>Word Size (-W):</TD>
-  <TD><input  type="text" name="blast_wordsize" id="blast_wordsize" tabindex="1" size="3" value="7" /></TD>
+  <TD><input  type="text" name="blast_wordsize" id="blast_wordsize" tabindex="1" size="3" value="<TMPL_VAR NAME="BLAST_WORDSIZE">" /></TD>
  </TR>
  <TR>
   <TD>Filter query sequence (DUST/SEG) (-F): </TD>
@@ -876,7 +877,7 @@ function rand ()
  </TR>    
  <TR>
   <TD>Expectation value (-e): </TD>
-  <TD><input  type="text" name="blast_eval" id="blast_eval" tabindex="1" size="4" value="30" /></TD>
+  <TD><input  type="text" name="blast_eval" id="blast_eval" tabindex="1" size="4" value="<TMPL_VAR NAME="BLAST_EVAL">" /></TD>
  </TR>
  <TR>
       <TD>Other Blast Parameters: </TD>
@@ -887,7 +888,7 @@ function rand ()
 
 
  <DIV id="tblastx_options" class="small algo_options" style="display: none">
- <font class="small">Hide HSPs with stop codons in a coding sequence?<label><input  type="radio" name="show_hsps_with_stop_codon" id="show_hsps_with_stop_codon" tabindex="1" value="1" />Yes</label><label><input  type="radio" name="show_hsps_with_stop_codon" id="show_hsps_with_stop_codon" tabindex="1" value="0" checked />No</label></font>
+ <font class="small">Hide HSPs with stop codons in a coding sequence?<label><input  type="radio" name="show_hsps_with_stop_codon" id="show_hsps_with_stop_codon" tabindex="1" value="1" <TMPL_VAR NAME="BLAST_FILTER_YES"> />Yes</label><label><input  type="radio" name="show_hsps_with_stop_codon" id="show_hsps_with_stop_codon" tabindex="1" value="0"   <TMPL_VAR NAME="BLAST_FILTER_NO"> />No</label></font>
 <br>Note: Word size limited to 3 for tblastx
 </DIV> 
 
