--- a/web/tmpl/GenomeList.tmpl
+++ b/web/tmpl/GenomeList.tmpl
@@ -142,6 +142,17 @@
 	    success : export_url
 	  });
 	 }
+	 else if (action == "list"){
+	   $('#retrieve_message').html('Loading GenomeList');
+	   $.ajax({
+	    data: {
+	 	   jquery_ajax: 1,
+	           fname: 'send_to_GenomeList',
+	    	   accn: accn
+	          },
+	    success : export_url
+	  });
+	 }
 	 else if (action == "synfind"){
 	   $('#retrieve_message').html('Loading SynFind');
 	   $.ajax({
@@ -653,6 +664,7 @@
 	   <option value = "align">GenomeAlign</option>
 	   <option value = "blast">CoGeBlast</option>
 	   <option value = "synfind">SynFind</option>
+	   <option value = "list">GenomeList</option>
 	  </select>
 	<span class='ui-button ui-corner-all ui-button-icon-right  ui-button-go' onclick="feature_checkboxes();"><span class="ui-icon ui-icon-extlink"></span>Go</span><span id=retrieve_message class=alert></span>  
 	 </div>
