updated default link to At-At analysis

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -539,7 +539,7 @@ function post_to_grimm(seq1, seq2)
 <div style="clear: both;"> </div>
 <hr>
 <span class="alert" style="float: left; margin-right: 5px;">Get Started:</span> 
-<div style="float: left"><div class="link" onclick=window.open("SynMap.pl?dsgid1=3068;dsgid2=8;D=20;g=10;A=5;w=0;b=4;ft1=1;ft2=1;dt=geneorder;ks=1;autogo=1")>Click here for an example analysis between <i>Arabidopsis thaliana</i> and <i>Arabidopsis lyrata</i>.</div><span class=small>(Note that syntenic gene pairs are colored by synonymous mutations (Ks))</span><div class="link" onclick=window.open("http://genomevolution.org/wiki/index.php/SynMap#Example_Results")>Click here for an explaination of the results.</div ></div>
+<div style="float: left"><div class="link" onclick=window.open("SynMap.pl?dsgid1=3068;dsgid2=11022;c=4;D=20;g=10;A=5;w=0;b=4;ft1=1;ft2=1;autogo=1;Dm=80;gm=40;snsd=0;do1=1;do2=1;do=40;cs=5;cso=S;dt=geneorder;ks=1")>Click here for an example analysis between <i>Arabidopsis thaliana</i> and <i>Arabidopsis lyrata</i>.</div><span class=small>(Note that syntenic gene pairs are colored by synonymous mutations (Ks))</span><div class="link" onclick=window.open("http://genomevolution.org/wiki/index.php/SynMap#Example_Results")>Click here for an explaination of the results.</div ></div>
 
 
 </TMPL_IF>
