updated option text to include skipping random and unknown chromosomes

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -691,7 +691,7 @@ function post_to_grimm(seq1, seq2)
    <td>Label Chromosomes?
    <td><input type=checkbox name="clabel" id="clabel" <TMPL_VAR NAME=CHR_LABEL> >
  <tr>
-   <td>Skip Random Chromosomes?
+   <td>Skip Random/Unknown Chromosomes?
    <td><input type=checkbox name="skiprand" id="skiprand" <TMPL_VAR NAME=SKIP_RAND> >
  <tr>
   <td>Sort Chromosomes by:
